customize home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,21 @@
-<div style="height: 80vh; width: 100%; display: flex; justify-content: center; align-items: center">
-   Rx Cache NPM Module
+<div class="flex flex-col items-center">
+   <p
+      class="text-center text-3xl md:text-4xl max-w-[280px] md:max-w-full font-bold mt-[7vh] sm:mt-[10vh] md:mt-[15vh]"
+   >
+      RxJS Cache Service <span class="text-secondary-light">Live Demo</span>
+   </p>
+
+   <p class="text-center max-w-[600px] m-x-auto mt-20">
+      This is a demonstration of how the
+      <a [href]="outerLinks.npm" target="_blank" class="link-primary">RxJS Cache Service</a>
+      npm module works in development mode. Open the cache devtool and navigate to the
+      <a routerLink="/posts" class="link-primary">Posts</a>
+      page to see how it operates.
+   </p>
+
+   <p class="text-center mt-12">
+      Check the
+      <a [href]="outerLinks.githubReadMe" target="_blank" class="link-primary">Documentation</a>
+      for more details.
+   </p>
 </div>
