--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,10 +1,6 @@
-<div class="flex justify-center items-center gap-1">
-   <button (click)="resetCache()">Reset Cache</button>
-</div>
-<div class="posts">
+<div class="w-full flex justify-center items-center w-[calc(56%-120px)] p-3 pt-8">
    <p *ngIf="!posts">Loading...</p>
    <ul *ngIf="posts">
-      <h3 style="margin-bottom: 1rem">Posts</h3>
       <li *ngFor="let post of posts" [routerLink]="'./' + post.id">
          {{ post.id }} {{ post.title }}
       </li>
