--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,56 +1,58 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  background-color: #222222;
+   background-color: #222222;
 
-  * {
-    margin: 0;
-    padding: 0;
-    color: #c2c2c2;
-    font-family: Ubuntu;
-  }
+   * {
+      margin: 0;
+      padding: 0;
+      color: #c2c2c2;
+      font-family: Ubuntu;
+   }
 
-  ul,
-  li {
-    list-style: none;
-    list-style-type: none;
-    transition: 0.15s;
-    &:hover {
-      color: #f4f4f4;
-    }
-  }
+   ul,
+   li {
+      list-style: none;
+      list-style-type: none;
+      transition: 0.15s;
+      &:hover {
+         color: #f4f4f4;
+      }
+   }
 }
 
 button {
-  padding: 8px 16px;
-  font-size: 14px;
-  font-weight: 500;
-  cursor: pointer;
-  color: #ffffff;
-  border: none !important;
-  border-radius: 6px !important;
-  background-color: seagreen;
+   font-weight: 500;
+   cursor: pointer;
+   color: #ffffff;
+   border: none !important;
 }
 
-.flex {
-  display: flex;
-  width: 100%;
+span {
+   display: inline-block;
 }
 
-.items-center {
-  align-items: center;
+.max-width {
+   width: 100%;
+   max-width: 700px;
+   margin-left: auto;
+   margin-right: auto;
 }
 
-.justify-center {
-  justify-content: center;
+.link-primary {
+   @apply text-primary;
 }
 
-.gap-1 {
-  gap: 1rem;
+.icon-small {
+   width: 48px;
+   height: 48px;
 }
 
-.gap-2 {
-  gap: 2rem;
+.icon-medium {
+   width: 68px;
+   height: 68px;
 }
