install rxjs-cache-service from npm

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,12 @@
    </p>
 
    <p class="text-center max-w-[600px] m-x-auto mt-20">
-      This is a demonstration of how the
+      Explore how the
       <a [href]="outerLinks.npm" target="_blank" class="link-primary">RxJS Cache Service</a>
-      npm module works in development mode. Open the cache devtool and navigate to the
+      npm module operates in development mode. Simply open the cache devtool using the button in the
+      bottom corner and navigate to the
       <a routerLink="/posts" class="link-primary">Posts</a>
-      page to see how it operates.
+      page to see it in action.
    </p>
 
    <p class="text-center mt-12">
