--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="w-full min-h-screen flex flex-col">
-   <header class="bg-secondary sticky top-0">
+   <header class="bg-secondary sticky top-0 z-50">
       <div class="max-width flex justify-between items-center p-6 h-[80px]">
          <div class="flex items-center gap-1">
             <img src="/assets/icons/logo.png" alt="logo" class="w-[32px] h-[32px]" />
