--- a/src/app/posts/post/post.component.html
+++ b/src/app/posts/post/post.component.html
@@ -1,7 +1,13 @@
-<div class="active-post">
-   <p *ngIf="!post">Loadding...</p>
-   <div *ngIf="post">
-      <h4 style="margin-bottom: 2rem">{{ post.id }} {{ post.title }}</h4>
-      <p>{{ post.body }}</p>
+<div class="max-width flex justify-center items-center">
+   <p *ngIf="!post">Loading...</p>
+   <div *ngIf="post" class="w-full bg-[#ffffff11] px-3 pt-2 pb-3 mb-2 rounded">
+      <div class="flex gap-2 items-center mb-3">
+         <img [src]="getAuthorImageLink(post!.userId)" alt="avatar" class="w-8 h-8 rounded-full" />
+         <p class="text-sm">{{ getAuthorName(post!.userId) }}</p>
+      </div>
+      <p class="text-[15px] font-medium mb-1 capitalize opacity-90">
+         {{ post!.title.split(" ").slice(0, 5).join(" ") }}
+      </p>
+      <p class="text-sm opacity-70">{{ post!.body }}</p>
    </div>
 </div>
