--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,8 +1,21 @@
-<div class="w-full flex justify-center items-center w-[calc(56%-120px)] p-3 pt-8">
+<div class="max-width flex justify-center items-center">
    <p *ngIf="!posts">Loading...</p>
-   <ul *ngIf="posts">
-      <li *ngFor="let post of posts" [routerLink]="'./' + post.id">
-         {{ post.id }} {{ post.title }}
+   <ul *ngIf="posts" class="w-full">
+      <li *ngFor="let post of posts" [routerLink]="'./' + post.id" class="cursor-pointer">
+         <div class="w-full bg-[#ffffff11] px-3 pt-2 pb-3 mb-2 rounded">
+            <div class="flex gap-2 items-center mb-3">
+               <img
+                  [src]="getAuthorImageLink(post.userId)"
+                  alt="avatar"
+                  class="w-8 h-8 rounded-full"
+               />
+               <p class="text-sm">{{ getAuthorName(post.userId) }}</p>
+            </div>
+            <p class="text-[15px] font-medium mb-1 capitalize opacity-90">
+               {{ post.title.split(" ").slice(0, 5).join(" ") }}
+            </p>
+            <p class="truncate text-sm opacity-70">{{ post.body }}</p>
+         </div>
       </li>
    </ul>
 </div>
