--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,18 @@ body {
       margin: 0;
       padding: 0;
       color: #c2c2c2;
-      font-family: Ubuntu;
+      font-family:
+         Ubuntu,
+         "Oxygen",
+         "Roboto",
+         "Cantarell",
+         -apple-system,
+         BlinkMacSystemFont,
+         "Segoe UI",
+         "Fira Sans",
+         "Droid Sans",
+         "Helvetica Neue",
+         sans-serif;
    }
 
    ul,
