--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,21 +1,26 @@
 <div class="max-width flex justify-center items-center">
    <p *ngIf="!posts">Loading...</p>
-   <ul *ngIf="posts" class="w-full">
-      <li *ngFor="let post of posts" [routerLink]="'./' + post.id" class="cursor-pointer">
-         <div class="w-full bg-[#ffffff11] px-3 pt-2 pb-3 mb-2 rounded">
-            <div class="flex gap-2 items-center mb-3">
-               <img
-                  [src]="getAuthorImageLink(post.userId)"
-                  alt="avatar"
-                  class="w-8 h-8 rounded-full"
-               />
-               <p class="text-sm">{{ getAuthorName(post.userId) }}</p>
+   <div *ngIf="posts" class="w-full">
+      <div class="w-full mb-4">
+         <app-pagination [count]="40" [pageSizes]="[5, 10]"></app-pagination>
+      </div>
+      <ul class="w-full">
+         <li *ngFor="let post of posts" [routerLink]="'./' + post.id" class="cursor-pointer">
+            <div class="w-full bg-[#ffffff11] px-3 pt-2 pb-3 mb-2 rounded">
+               <div class="flex gap-2 items-center mb-3">
+                  <img
+                     [src]="getAuthorImageLink(post.userId)"
+                     alt="avatar"
+                     class="w-8 h-8 rounded-full"
+                  />
+                  <p class="text-sm">{{ getAuthorName(post.userId) }}</p>
+               </div>
+               <p class="text-[15px] font-medium mb-1 capitalize opacity-90">
+                  {{ post.title.split(" ").slice(0, 5).join(" ") }}
+               </p>
+               <p class="truncate text-sm opacity-70">{{ post.body }}</p>
             </div>
-            <p class="text-[15px] font-medium mb-1 capitalize opacity-90">
-               {{ post.title.split(" ").slice(0, 5).join(" ") }}
-            </p>
-            <p class="truncate text-sm opacity-70">{{ post.body }}</p>
-         </div>
-      </li>
-   </ul>
+         </li>
+      </ul>
+   </div>
 </div>
