--- a/src/app/core/components/pagination/pagination.component.html
+++ b/src/app/core/components/pagination/pagination.component.html
@@ -1,5 +1,5 @@
-<div class="w-full flex items-center justify-between gap-4">
-   <div class="flex items-center gap-2">
+<div class="w-full flex flex-col-reverse gap-3 justify-start sm:flex-row sm:justify-between">
+   <div class="flex items-center gap-1.5">
       <span class="text-[15px]">Page: </span>
       <div class="flex gap-1.5">
          <button
@@ -13,8 +13,8 @@
       </div>
    </div>
 
-   <div class="flex items-center gap-2">
-      <span class="text-[15px]">Page Size: </span>
+   <div class="flex items-center gap-1.5">
+      <span class="text-[15px] w-[37px] sm:w-auto">Size: </span>
       <div class="flex gap-1.5">
          <button
             *ngFor="let pageSize of pageSizes"
