--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,8 +2,21 @@
    <p *ngIf="!posts">Loading...</p>
    <div *ngIf="posts" class="w-full">
       <div class="w-full mb-4">
-         <app-pagination [count]="40" [pageSizes]="[5, 10]"></app-pagination>
+         <app-pagination [count]="selectedAuthor ? 10 : 40" [pageSizes]="[5, 10]"></app-pagination>
       </div>
+      <div class="mb-4">
+         <ng-select
+            class="custom-select"
+            [items]="authors"
+            bindLabel="name"
+            bindValue="userId"
+            placeholder="Filter by Author"
+            [(ngModel)]="selectedAuthor"
+            (change)="authorChange($event)"
+         >
+         </ng-select>
+      </div>
+
       <ul class="w-full">
          <li *ngFor="let post of posts" [routerLink]="'./' + post.id" class="cursor-pointer">
             <div class="w-full bg-[#ffffff11] px-3 pt-2 pb-3 mb-2 rounded">
