--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+@import "~node_modules/@ng-select/ng-select/themes/default.theme.css";
 
 @tailwind base;
 @tailwind components;
@@ -74,4 +75,51 @@ span {
 .icon-medium {
    width: 68px;
    height: 68px;
+}
+
+.ng-select.custom-select {
+   .ng-dropdown-panel {
+      background-color: #222222 !important;
+      border-color: #ffffff33 !important;
+      .ng-dropdown-panel-items .ng-option {
+         background-color: #ffffff11 !important;
+         font-size: 14px !important;
+         padding: 6px 8px;
+      }
+
+      .scroll-host {
+         &::-webkit-scrollbar {
+            width: 4px;
+         }
+         &::-webkit-scrollbar-track {
+            background-color: #444444 !important;
+         }
+         &::-webkit-scrollbar-thumb {
+            background-color: #222222 !important;
+         }
+      }
+   }
+
+   .ng-select-container {
+      background-color: #ffffff11;
+      border-color: #ffffff11 !important;
+   }
+
+   .ng-clear-wrapper {
+      width: 36px;
+      height: 32px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+         .ng-clear {
+            opacity: 1;
+            color: #ffffff;
+         }
+      }
+      .ng-clear {
+         font-size: 24px;
+         opacity: 0.8;
+      }
+   }
 }
