add skeleton to posts page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,11 +23,11 @@
       </div>
    </header>
 
-   <main class="max-width p-4 pb-12 pt-8">
+   <main class="max-width p-4 pb-6 md:pb-10 lg:pb:16 pt-8">
       <router-outlet></router-outlet>
    </main>
 
-   <footer class="p-4 pb-4 pt-12 mt-auto bg-gradient-to-b from-[#ffffff00] to-[#0b485988]">
+   <footer class="p-4 mt-auto bg-gradient-to-b from-[#ffffff00] to-[#0b485988]">
       <div
          class="max-width flex flex-col-reverse gap-1.5 min-[500px]:gap-3 min-[500px]:items-center min-[1000px]:flex-row min-[1000px]:justify-between"
       >
