--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,57 +1,11 @@
 <div class="w-full min-h-screen flex flex-col">
-   <header class="bg-secondary sticky top-0 z-50">
-      <div class="max-width flex justify-between items-center p-6 h-[80px]">
-         <div class="flex items-center gap-1">
-            <img src="/assets/icons/logo.png" alt="logo" class="w-[32px] h-[32px]" />
-            <a routerLink="/" class="text-primary text-lg min-[399px]:text-xl font-medium"
-               >RxJS Cache Service</a
-            >
-         </div>
-         <nav>
-            <ul class="flex gap-6 sm:gap-12 md:gap-16">
-               <li>
-                  <a
-                     routerLink="/"
-                     routerLinkActive="underline font-semibold"
-                     [routerLinkActiveOptions]="{exact: true}"
-                     >Home</a
-                  >
-               </li>
-               <li><a routerLink="/posts" routerLinkActive="underline font-semibold">Posts</a></li>
-            </ul>
-         </nav>
-      </div>
-   </header>
+   <app-header></app-header>
 
-   <main class="max-width p-4 pb-6 md:pb-10 lg:pb:16 pt-8">
+   <main class="max-width pb-2 md:pb-6 lg:pb:12 pt-8">
       <router-outlet></router-outlet>
    </main>
 
-   <footer class="p-4 mt-auto bg-gradient-to-b from-[#ffffff00] to-[#0b485988]">
-      <div
-         class="max-width flex flex-col-reverse gap-1.5 min-[500px]:gap-3 min-[500px]:items-center min-[1000px]:flex-row min-[1000px]:justify-between"
-      >
-         <div class="flex items-center gap-1">
-            <img src="assets/icons/mail.png" alt="mail" class="icon-small" />
-            <a [href]="'mailto:' + outerLinks.mail">{{ outerLinks.mail }}</a>
-         </div>
-
-         <div class="flex items-center gap-1">
-            <a [href]="outerLinks.github" target="_blank">
-               <img
-                  src="/assets/icons/github.png"
-                  alt="github"
-                  class="w-[48px] h-[48px] min-[500px]:w-[68px] min-[500px]:h-[68px]"
-               />
-            </a>
-            <a [href]="outerLinks.npm" target="_blank">
-               <span
-                  class="border border-2 border-[#C53735] w-[40px] h-[40px] min-[500px]:w-[56px] min-[500px]:h-[56px] flex items-center p-1.5 rounded-full"
-               >
-                  <img src="/assets/icons/npm.png" alt="npm" class="w-full h-full" />
-               </span>
-            </a>
-         </div>
-      </div>
-   </footer>
+   <div class="mt-auto">
+      <app-footer></app-footer>
+   </div>
 </div>
