optimize loadings, add project github link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col items-center">
    <p
-      class="text-center text-3xl md:text-4xl max-w-[280px] md:max-w-full font-bold mt-[7vh] sm:mt-[10vh] md:mt-[15vh]"
+      class="text-center text-3xl md:text-4xl max-w-[280px] md:max-w-full font-bold mt-[7vh] sm:mt-[10vh] md:mt-[13vh] 2xl:mt-[10vh]"
    >
       RxJS Cache Service <span class="text-secondary-light">Live Demo</span>
    </p>
 
-   <p class="text-center max-w-[600px] m-x-auto mt-20">
+   <p class="text-center max-w-[600px] m-x-auto mt-16">
       Explore how the
       <a [href]="outerLinks.npm" target="_blank" class="link-primary">RxJS Cache Service</a>
       npm module operates in development mode. Simply open the cache devtool using the button in the
@@ -18,5 +18,10 @@
       Check the
       <a [href]="outerLinks.githubReadMe" target="_blank" class="link-primary">Documentation</a>
       for more details.
+   </p>
+
+   <p class="text-center mt-3">
+      Also you'll find this `Demo Project` source code on
+      <a [href]="outerLinks.githubDemo" target="_blank" class="link-primary">Github</a>.
    </p>
 </div>
