--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-full min-h-screen flex flex-col">
+<div class="w-full min-h-[100dvh] flex flex-col">
    <app-header></app-header>
 
    <main class="max-width pb-2 md:pb-6 lg:pb:12 pt-8">
