--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="bg-secondary sticky top-0 z-50">
-   <div class="max-width flex justify-between items-center py-6 h-[80px]">
+   <div class="max-width !pr-5 flex justify-between items-center py-6 h-[80px]">
       <div class="flex items-center gap-1">
          <img src="/assets/icons/logo.png" alt="logo" class="w-[32px] h-[32px]" />
          <a routerLink="/" class="text-primary text-lg min-[399px]:text-xl font-medium"
