--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,11 @@ body {
    }
 }
 
+::selection {
+   color: #d8d8d8;
+   background-color: #d97b5d;
+}
+
 button {
    font-weight: 500;
    cursor: pointer;
