--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,8 @@ span {
    display: inline-block;
 }
 
+/* Custom classes*/
+
 .max-width {
    width: 100%;
    max-width: 700px;
@@ -74,6 +76,22 @@ span {
    @apply text-primary;
 }
 
+/* Skeleton Styles */
+
+.skeleton {
+   animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+   0% {
+      background-color: #ffffff10;
+   }
+   100% {
+      background-color: #ffffff18;
+   }
+}
+
+/* Select Styles */
 .ng-select.custom-select {
    .ng-dropdown-panel {
       background-color: #222222 !important;
