replace old package with new one, change project name

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -3,7 +3,7 @@
       <div class="flex items-center gap-1">
          <img src="/assets/icons/logo.png" alt="logo" class="w-[32px] h-[32px]" />
          <a routerLink="/" class="text-primary text-lg min-[399px]:text-xl font-medium"
-            >RxJS Cache Service</a
+            >RxJS Response Cache</a
          >
       </div>
       <nav>
