--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,12 @@
    <p
       class="text-center text-3xl md:text-4xl max-w-[280px] md:max-w-full font-bold mt-[7vh] sm:mt-[10vh] md:mt-[13vh] 2xl:mt-[10vh]"
    >
-      RxJS Cache Service <span class="text-secondary-light">Live Demo</span>
+      RxJS Response Cache <span class="text-secondary-light">Live Demo</span>
    </p>
 
    <p class="text-center max-w-[600px] m-x-auto mt-16">
       Explore how the
-      <a [href]="outerLinks.npm" target="_blank" class="link-primary">RxJS Cache Service</a>
+      <a [href]="outerLinks.npm" target="_blank" class="link-primary">RxJS Response Cache</a>
       npm module operates in development mode. Simply open the cache devtool using the button in the
       bottom corner and navigate to the
       <a routerLink="/posts" class="link-primary">Posts</a>
